<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cc955e"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/inspirationalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/you_are_strong_and_courageous"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="320dp"
        android:layout_height="230dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/viewpager_background"
        android:clipToPadding="false"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inspirationalText" />

    <TextView
        android:id="@+id/exploreLocateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Explore Locate"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPager" />

    <LinearLayout
        android:id="@+id/clickableImagesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/exploreLocateText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/police_station"
            android:src="@drawable/ic_police_station" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:src="@drawable/ic_hospital"
            android:contentDescription="@string/hospital" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:src="@drawable/pharmacy"
            android:contentDescription="@string/pharmacy" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:src="@drawable/bus_stop"
            android:contentDescription="@string/bus_station" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/shareLocationBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/box_background"
        android:padding="16dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/clickableImagesLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/shareLocationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:text="Share Your\nLocation"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/googleMapsLogo"
            android:layout_width="94dp"
            android:layout_height="76dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/google_maps_logo"
            android:src="@drawable/google_maps" />
    </RelativeLayout>

    <Button
        android:id="@+id/alertBtn"
        android:layout_width="103dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#b50000"
        android:text="@string/alert"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shareLocationBox" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#cc955e"
        app:menu="@menu/bottom_nav_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="4dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
